getState, getOrders, getMatching Prices is now accessing the database instead of the blockchain. The database is updateding itself on the basis of events thrown by the smart contract
